fixed column spacing in sii_table

--- a/app/assets/stylesheets/spectrum_identification_results.css.scss
+++ b/app/assets/stylesheets/spectrum_identification_results.css.scss
@@ -49,6 +49,14 @@ div.dataTables_paginate a.ui-state-disabled {
     color: gray;
   }
 
+table#sii_table {
+  //border: solid 1px gray;
+  //border-radius: 4px;
+  margin: 0;
+    th { text-align: center; }
+    .sii_id {width: 30%} 
+  }
+
 
 //table#sii_table { display: none; }
 //table#sii_table tbody { display: none;}
